WebBuild/TemplateData/style.css
body { padding: 0; margin: 0; border: 0; height: 100vh; background-color: #161616; text-align: left; }
#unity-canvas { background: #161616; width: 100%; height: 100%; position: fixed; }

#loading-logo, #progress-bar {
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
}

#loading-logo {
    background-image: url('star-logo.png');
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;

    width: 150px;
    height: 150px;
}

#progress-bar {
    margin-top: 155px;
    width: 150px;
    height: 5px;
    background: black;
    border-radius: 5px;
}

#progress-bar .fill{
    width: 50%;
    height: 100%;
    background: #FF6B00;
    border-radius: 5px;
}

.end-panel {
    position: absolute;
    width: 100%;
    height: 100%;

    -webkit-user-select: none; /* Safari */
    -ms-user-select: none; /* IE 10 and IE 11 */
    user-select: none; /* Standard syntax */
}

.cta-button {
    background-color: #f26c24;
    color: white;

    font-family: "Lora", serif;
    font-optical-sizing: auto;
    font-weight: 700;
    font-style: italic;
    font-size: 3rem;

    position: absolute;
    width: 700px;
    padding: 20px 0px;

    text-align: center;
    vertical-align: middle;

    bottom: 0px;
    left: 50%;
    transform: translate(-50%, calc(-50% - 8vh));
    transition: all 0.3s ease;
    
    cursor: pointer;
}

.cta-button:hover {
    color: #f26c24;
    background-color: white;
}

.sharing-buttons {
    position: absolute;
    bottom: 0px;
    left: 50%;
    transform: translate(-50%, calc(-50% - 2vh));

    display: flex;
    justify-content: center;
    gap: 2vw;
}

.sharing-button {
    width: 5vh;
    height: 5vh;
    border-radius: 50%;
    background-color: #fff;
    display: flex;
    justify-content: center;
    align-items: center;
    text-decoration: none;
    transition: background-color 0.3s ease;

    cursor: pointer;
}

.sharing-button:hover {
    background-color: #f26c24;
}

.sharing-button img {
    width: 100%;
    height: 100%;
}

@media only screen and (max-width: 800px) {
    .cta-button {
        width: 90%;
        font-size: 2rem;
    }
    .sharing-buttons {
        gap: 10vw;
    }
    .sharing-button {
        width: 5vh;
        height: 5vh;
    }
}

